syntax = "proto3";

package redimo.v1;

import "google/protobuf/any.proto";

option go_package = "github.com/dbProjectRED/redimo/v1";

service RedimoService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Del(DelRequest) returns (DelResponse);
  rpc HGet(HGetRequest) returns (HGetResponse);
  rpc HSet(HSetRequest) returns (HSetResponse);
  rpc HDel(HDelRequest) returns (HDelResponse);
}

message Table {
  string table = 1;
  string aws_access_key_id = 2;
  string aws_secret_access_key = 3;
  string aws_session_token = 4;
  string aws_region = 5;
  string endpoint_override = 6;
}

message GetRequest {
  Table table = 1;
  string key = 2;
}

message GetResponse {
  bool found = 1;
  google.protobuf.Any value = 2;
}

message SetRequest {
  Table table = 1;
  string key = 2;
  google.protobuf.Any value = 3;
}

message SetResponse {

}

message DelRequest {
  Table table = 1;
  string key = 2;
}

message DelResponse {

}

message HGetRequest {
  Table table = 1;
  string key = 2;
  string field_name = 3;
}

message HGetResponse {
  bool found = 1;
  google.protobuf.Any value = 2;
}

message HSetRequest {
  Table table = 1;
  string key = 2;
  string field_name = 3;
  google.protobuf.Any value = 4;
}

message HSetResponse {

}

message HDelRequest {
  Table table = 1;
  string key = 2;
  string field_name = 3;
}

message HDelResponse {
  
}

